[gd_scene load_steps=2 format=3 uid="uid://cx5pni7po4cd1"]

[ext_resource type="Script" uid="uid://btpif8tihnj0i" path="res://script/main_menu.gd" id="1_3er1b"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3er1b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 130.0
offset_right = 945.0
offset_bottom = 527.0
theme_override_constants/separation = 40
alignment = 1

[node name="Jogar" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 2.01
theme_override_constants/outline_size = 6
theme_override_constants/icon_max_width = 5
theme_override_constants/align_to_largest_stylebox = 5
theme_override_constants/line_spacing = 5
text = "Jogar "

[node name="Tutorial" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
text = "Tutorial"

[node name="Sair" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
text = "Fechar Jogo"

[connection signal="pressed" from="VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_sair_pressed"]
